# sky130

./: .gitignore  README.md  pyproject.toml
sky130/: __init__.py  devices.py  sources.py  units.py
sky130/examples/: current_mirror.py  testbench.py
