[tool.poetry]
name = "sky130"
version = "0.1.0"
description = ""
authors = ["Hugo Lundin <hugo@lundin.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
click = "^8.1.3"
svgwrite = "^1.4.3"
pyyaml = "^6.0"
pandas = "^2.0.2"
tabulate = "^0.9.0"
wheel = "^0.40.0"
setuptools = "^67.8.0"
tikzplotlib = "^0.10.1"
pyspice = {git = "https://github.com/hugolundin/pyspice", rev = "main"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
